feat: add 23-02-25 cook daily

--- a/docs/daily/22-10-05.md
+++ b/docs/daily/22-10-05.md
@@ -7,6 +7,8 @@
 - [红烧鱼块最好吃的做法，大厨分享不外传秘诀，鱼肉鲜香滑嫩，美味](https://www.bilibili.com/video/BV1rZ4y1X7tm)
 - 注意点：这次做的鱼块没按上面视频来，有点翻车，老抽放多了，色上多了，味道还行，昨天买的大葱多了，就放鱼里了，建议不要放。另外鱼的处理问题，最好按照视频来，把中间的刺踢出去。但注意，只要是吃鱼，就要注意刺。另外加花椒油味道还行。煎鱼时，注意不要一次煎太多，电磁炉受热不均，油不够鱼皮会被掉。
 
+重置版：[粉蒸鱼、蒸藕、红烧鱼块(23-02-25)](/daily/23-02-25.html)
+
 ## 清炒黄芽白菜
 
 - [厨师长教你：“酸辣大白菜”的家常做法，酸辣又开胃，收藏了](https://www.bilibili.com/video/BV1aJ411z7z9)
