feat: update 23-02-25/26 daily cook

--- a/docs/daily/22-09-17.md
+++ b/docs/daily/22-09-17.md
@@ -1,4 +1,4 @@
-# 白菜猪肉炖粉条、青椒炒青豆(22-09-17)
+# 白菜猪肉炖粉条、青椒毛豆粒(22-09-17)
 
 ![22-09-17-01.png](/images/food/22-09-17-01.png)
 
@@ -7,10 +7,10 @@
 - [东北银都爱吃的【猪肉炖粉条】，简单粗暴又豪气！大妹子做的贼好吃！-哔哩哔哩](https://www.bilibili.com/video/BV13b411H7fv)
 - 注意点：五花肉不要太厚；白菜可以多点，看起来多，煮完后就少了。煎五花肉时，注意五花肉水分弄干；粉条放的时机要注意，晚点放，不然容易碎；生抽可以多点，有点淡。
 
-## 青椒炒青豆
+## 青椒毛豆粒
 
 - [脆嫩可口的青豆，配上鲜香入味的肉末，好吃又家常的青豆炒肉来了！-哔哩哔哩](https://b23.tv/VfCE9ck)
-- 注意点：买的青豆洗了之后，皮都会掉，但不洗又感觉不干净。
+- 注意点：买的毛豆粒洗了之后，皮都会掉，但不洗又感觉不干净。
 
 ![22-09-17-02.png](/images/food/22-09-17-02.png)
 ![22-09-17-03.png](/images/food/22-09-17-03.png)
