--- a/docs/daily/23-02-25.md
+++ b/docs/daily/23-02-25.md
@@ -11,6 +11,8 @@
 
 注意点
   - 1、腌制时入味后，后面淋糊的时候，不要加盐、生抽，不然会咸。
+  - 2、蒸藕蒸的是脆藕，和粉蒸肉一样，电高压锅定时是 25 分钟。做不出外婆做的那种味道了 😭，不怎么好吃
+  - 3、蒸菜一定要热，不然冷了不好吃
 
 
 ![23-02-25-02.png](/images/food/23-02-25-02.png)
